# BarqTrain

./: .gitignore  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
csrc/: CMakeLists.txt
csrc/kernels/: chunked_cross_entropy.cu  flash_attention.cu  lora.cu  paged_kv_cache.cu  rmsnorm.cu
csrc/src/: bindings.cpp
examples/: barqtrain_benchmark_comparison_colab.ipynb  barqtrain_training_inference_colab.ipynb
python/barqtrain/: __init__.py  _ffi.py  data.py  kv_cache.py  lora.py  memory.py  ops.py  optim.py  patch_models.py
python/barqtrain/benchmarks/: __init__.py  baseline.py
rust/: Cargo.toml
rust/src/: lib.rs
tests/: test_cpu_smoke.py  test_data.py  test_ffi.py  test_kv_cache.py  test_memory.py  test_optim.py  test_patch_models.py  test_rmsnorm.py
